# computer-vision-exercises

./: .gitignore  README.md
ex1/: CMakeLists.txt  Makefile  README.md  cameraCalibration  cameraCalibration.cpp
ex2/: CMakeLists.txt  sceneClassifier.cpp  svm_test.cpp
