cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
project( exercise2 )
find_package(OpenCV REQUIRED)
message(STATUS "OpenCV library status:")
message(STATUS "    config: ${OpenCV_DIR}")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
add_subdirectory(LibGIST)
add_executable( sceneClassifier sceneClassifier.cpp )
target_link_libraries( sceneClassifier PRIVATE ${OpenCV_LIBS})
target_link_libraries( sceneClassifier PRIVATE LibGIST)
add_executable( svm_test svm_test.cpp )
target_link_libraries( svm_test PRIVATE ${OpenCV_LIBS})
target_link_libraries( svm_test PRIVATE LibGIST)
